examples/datalog/14_aggregations/29_moving_avg.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_moving_avg
Knowledge graph 'test_moving_avg' created.
Switched to knowledge graph: test_moving_avg
> .kg use test_moving_avg
Switched to knowledge graph: test_moving_avg
> +values[(1, 10), (2, 20), (3, 15), (4, 25), (5, 30)].
Inserted 5 fact(s) into 'values'.
> moving_sum_3(Id, <SUM:Val>) :- values(Id, _), values(OtherId, Val), OtherId <= Id, OtherId >= Id - 2.
Script error: Parse error: Unknown aggregate function: 
